cmake_minimum_required(VERSION 3.20)
project(tour)

set(CMAKE_CXX_STANDARD 11)

add_executable(demo1_2 ch01/demo/demo1_2.cpp)
add_executable(ex1_3 ch01/exercise/ex1_3.cpp)
add_executable(ex1_4 ch01/exercise/ex1_4.cpp)
add_executable(ex1_5 ch01/exercise/ex1_5.cpp)
add_executable(ex1_7 ch01/exercise/ex1_7.cpp)
add_executable(demo1_4_1 ch01/demo/demo1_4_1.cpp)
add_executable(ex1_9 ch01/exercise/ex1_9.cpp)
add_executable(ex1_10 ch01/exercise/ex1_10.cpp)
add_executable(ex1_11 ch01/exercise/ex1_11.cpp)